mp3gain (1.5.2-r2-6) UNRELEASED; urgency=high

  * Add various patches from Daniel Kobras' mpg123 packaging to fix
    buffer overflows in the embedded copy/fork of mpglib
    - CVE-2004-0805 (originally #270542 in mpg123)
    - CVE-2004-0991
    - CVE-2006-1655 (originally #361863 in mpg123)
    (Closes: #740268, hopefully)

 -- Simon McVittie <smcv@debian.org>  Sun, 16 Mar 2014 22:13:57 +0000

mp3gain (1.5.2-r2-5) unstable; urgency=high

  * Only build with -fsanitize=address on Linux with amd64, i386, armel,
    armhf, powerpc CPUs: it isn't functional everywhere

 -- Simon McVittie <smcv@debian.org>  Tue, 11 Mar 2014 22:17:39 +0000

mp3gain (1.5.2-r2-4) unstable; urgency=high

  * Build with -fsanitize=address to catch stack buffer overflows
    (mitigates: #740268)

 -- Simon McVittie <smcv@debian.org>  Mon, 10 Mar 2014 09:42:23 +0000

mp3gain (1.5.2-r2-3) unstable; urgency=medium

  * Update debian/watch to a version by Bart Martens to deal with the upstream
    file-naming convention
  * Use dpkg-recommended build flags
  * 13_constant_expr.diff: use constant expressions to size arrays
  * Standards-Version: 3.9.5 (no changes needed)

 -- Simon McVittie <smcv@debian.org>  Sat, 25 Jan 2014 13:03:44 +0000

mp3gain (1.5.2-r2-2) unstable; urgency=low

  [ Simon McVittie ]
  * Specifically enable pristine-tar when using git-buildpackage for this
    package

  [ Fabrizio Regalli ]
  * Fixed Vcs-Browser field in d/control.
  * Refreshed all previous patches.
  * Added 12_force_update.diff patch. (Closes: #587466)
  * Update d/copyright to latest DEP5 revision.

 -- Fabrizio Regalli <fabreg@fabreg.it>  Thu, 10 Nov 2011 16:10:48 +0100

mp3gain (1.5.2-r2-1) unstable; urgency=low

  [ Fabrizio Regalli ]
  * New upstream version.
  * Switch to quilt 3.0 format.
  * New maintainer. (Closes: #619847)
  * Switch d/compat to 8.
  * Update debhelper (>= 8).
  * Removed dpatch from dependecies.
  * Bump to Standards-Version: 3.9.2.
  * Added Vcs-*