@@ -1,12 +1,17 @@
 From: Stefan Fritsch <sf@sfritsch.de>
+Date: Fri, 24 Jul 2009 15:23:32 +0200
 Subject: don't return 0 on error
-Date: 2009-07-24 15:23:32 +0200
 
 Bug-Debian: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=433757
+---
+ mp3gain.c | 28 ++++++++++++++++------------
+ 1 file changed, 16 insertions(+), 12 deletions(-)
 
+diff --git a/mp3gain.c b/mp3gain.c
+index c575af0..36f4bf3 100644
 --- a/mp3gain.c
 +++ b/mp3gain.c
-@@ -1992,6 +1992,7 @@
+@@ -1992,6 +1992,7 @@ int main(int argc, char **argv) {
  					} else {
  						fprintf(stderr,"No undo information in %s\n",argv[mainloop]);
  					}
@@ -14,7 +19,7 @@ Bug-Debian: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=433757
  				}
  		  }
  	  }
-@@ -2062,8 +2063,9 @@
+@@ -2062,8 +2063,9 @@ int main(int argc, char **argv) {
  #else
  		  if ((inf == NULL)&&(tagInfo[mainloop].recalc > 0)) {
  #endif
@@ -26,7 +31,7 @@ Bug-Debian: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=433757
  		  }
  		  else {
  #ifdef AACGAIN
-@@ -2148,8 +2150,9 @@
+@@ -2148,8 +2150,9 @@ int main(int argc, char **argv) {
  				if (!ok) {
  #endif
                      if (!BadLayer) {
@@ -38,7 +43,7 @@ Bug-Debian: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=433757
                      }
  				}
  				else {
-@@ -2184,8 +2187,8 @@
+@@ -2184,8 +2187,8 @@ int main(int argc, char **argv) {
  								(Xingcheck[0] == 'I' && Xingcheck[1] == 'n' && Xingcheck[2] == 'f' && Xingcheck[3] == 'o')) {
  							bitridx = (curframe[2] >> 4) & 0x0F;
  							if (bitridx == 0) {
@@ -49,7 +54,7 @@ Bug-Debian: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=433757
  								ok = 0;
  							}
  							else {
-@@ -2228,8 +2231,8 @@
+@@ -2228,8 +2231,8 @@ int main(int argc, char **argv) {
  						while (ok) {
  							bitridx = (curframe[2] >> 4) & 0x0F;
  							if (bitridx == 0) {
@@ -60,7 +65,7 @@ Bug-Debian: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=433757
  								ok = 0;
  							}
  							else {
-@@ -2315,8 +2318,9 @@
+@@ -2315,8 +2318,9 @@ int main(int argc, char **argv) {
  					}
  
  					if (dBchange == GAIN_NOT_ENOUGH_SAMPLES) {
@@ -72,7 +77,7 @@ Bug-Debian: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=433757
  						numFiles--;
  					}
  					else {
-@@ -2456,8 +2460,8 @@
+@@ -2456,8 +2460,8 @@ int main(int argc, char **argv) {
  		}
  
  		if (dBchange == GAIN_NOT_ENOUGH_SAMPLES) {
