@@ -1,14 +1,19 @@
 From: Stefan Fritsch <sf@sfritsch.de>
-Date: 2009-07-24 15:30:31 +0200
+Date: Fri, 24 Jul 2009 15:30:31 +0200
 Subject: Use tempfile by default
 
 Using a tempfile is a lot faster than direct writes on ReiserFS
 and has no disadvantages besides diskspace usage.
 We make it the default and let -T restore the old behaviour.
+---
+ mp3gain.c | 16 ++++++++++------
+ 1 file changed, 10 insertions(+), 6 deletions(-)
 
+diff --git a/mp3gain.c b/mp3gain.c
+index 36f4bf3..14d43e0 100644
 --- a/mp3gain.c
 +++ b/mp3gain.c
-@@ -129,7 +129,7 @@
+@@ -129,7 +129,7 @@ unsigned char buffer[BUFFERSIZE];
  
  int writeself = 0;
  int QuietMode = 0;
@@ -17,7 +22,7 @@ We make it the default and let -T restore the old behaviour.
  int NowWriting = 0;
  double lastfreq = -1.0;
  
-@@ -1045,7 +1045,7 @@
+@@ -1045,7 +1045,7 @@ int changeGain(char *filename AACGAIN_ARG(AACGainHandle aacH), int leftgainchang
              deleteFile(outfilename);
  			passError( MP3GAIN_UNSPECIFED_ERROR, 3,
                  "Not enough temp space on disk to modify ", filename, 
@@ -26,7 +31,7 @@ We make it the default and let -T restore the old behaviour.
              return M3G_ERR_NOT_ENOUGH_TMP_SPACE;
          }
          else {
-@@ -1327,10 +1327,11 @@
+@@ -1327,10 +1327,11 @@ void fullUsage(char *progname) {
  		fprintf(stderr,"\t%cd <n> - modify suggested dB gain by floating-point n\n",SWITCH_CHAR);
  		fprintf(stderr,"\t%cc - ignore clipping warning when applying gain\n",SWITCH_CHAR);
  		fprintf(stderr,"\t%co - output is a database-friendly tab-delimited list\n",SWITCH_CHAR);
@@ -41,7 +46,7 @@ We make it the default and let -T restore the old behaviour.
  #endif
  		fprintf(stderr,"\t%cq - Quiet mode: no status messages\n",SWITCH_CHAR);
  		fprintf(stderr,"\t%cp - Preserve original file timestamp\n",SWITCH_CHAR);
-@@ -1675,10 +1676,13 @@
+@@ -1675,10 +1676,13 @@ int main(int argc, char **argv) {
                      break;
  
  				case 't':
