@@ -6,6 +6,9 @@ mp3gain (1.5.2-r2-6) UNRELEASED; urgency=high
     - CVE-2004-0991
     - CVE-2006-1655 (originally #361863 in mpg123)
     (Closes: #740268, hopefully)
+  * debian/patches/*.diff: adjust so gbp-pq can import all of them
+  * debian/patches/*.diff: update Sourceforge bug URLs to new layout
+    (but keep the old versions for posterity)
 
  -- Simon McVittie <smcv@debian.org>  Sun, 16 Mar 2014 22:13:57 +0000
 
